[package]
name = "remacs-lib"
version = "0.1.0"

[dependencies]
rand = "0.3.15"
libc = "0.2"
errno = "0.2.3"
darling = "0.2"
syn = { version = "0.11.11", features = ["full"] }

[lib]
path = "lib.rs"
crate-type = ["staticlib", "rlib"]

[features]
# Treat warnings as a build error on Travis.
strict = []

[profile.release]
panic = "abort"
lto = true

[profile.dev]
panic = "abort"
lto = true
