[package]
name = "remacs-lib"
version = "0.1.0"

[dependencies]
remacs-util = { version = "0.1.0", path = "../remacs-util" }
darling = "0.2"
errno = "0.2.3"
lazy_static = "0.2.2"
libc = "0.2"
rand = "0.3.15"
regex = "0.2"
syn = { version = "0.11.11", features = ["full"] }
time = "0.1"

[lib]
path = "lib.rs"
crate-type = ["staticlib", "rlib"]

[features]
# Treat warnings as a build error on Travis.
strict = []

[profile.release]
panic = "abort"
lto = true

[profile.dev]
panic = "abort"
lto = true
