[package]
name = "remacs-macros"
version = "0.1.0"
description = "Procedural macro used to generate definitions for lisp native functions."

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
quote = "0.5"
syn = { version = "0.13.1", features = ["full"] }
remacs-util = { version = "0.1.0", path = "../remacs-util" }
regex = "0.2.5"
lazy_static = "0.2.2"

[dev-dependencies]
syn = { version = "0.13.1", features = ["full"] }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
