[package]
name = "remacs-macros"
version = "0.1.0"
description = "Procedural macro used to generate definitions for lisp native functions."
edition = "2018"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
quote = "0.6"
syn = { version = "0.15.26", features = ["full"] }
remacs-util = { version = "0.1.0", path = "../remacs-util" }
regex = "0.2"
lazy_static = "1.0"
proc-macro2 = "0.4"
