[package]
name = "remacs-util"
version = "0.1.0"
description = "Common utility code linked by other remacs crates."

[dependencies]
rand = "0.3.15"
libc = "0.2"
errno = "0.2.3"
darling = "0.2"
syn = { version = "0.11.11", features = ["full"] }

[lib]
path = "lib.rs"

[features]
# Treat warnings as a build error on Travis.
strict = []

[profile.release]
panic = "abort"
lto = true

[profile.dev]
panic = "abort"
lto = true
